Apache Atlas installation and config details added